# quizzy

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
QuizzyCore/: Cargo.toml
QuizzyCore/src/: crypto.rs  decode.rs  encode.rs  lib.rs  problem.rs  types.rs
docs/: encoding-spec.md  problem-spec.md
public/: CNAME
src/: App.vue
src/assets/: base.css
src/components/: FileInput.vue  ProblemInput.vue  QuizCard.vue  QuizProgress.vue  QuizRunner.vue  ResultsOutput.vue  TeacherPanel.vue
src/types/: quiz.ts
src/utils/: crypto.ts  markdown.ts
