[package]
name = "quizzy-core"
version = "0.1.0"
edition = "2021"
description = "Core encryption/decryption engine for Quizzy — compiles to WASM and native"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "quizzy"
path = "src/bin/quizzy.rs"
required-features = ["cli"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]
cli = ["clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "2"

# WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
